[package]
name = "easyshare-server"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { workspace = true}
cfg-if  = {workspace = true}
maud = "0.25.0"
tracing = "0.1"
tracing-web = "0.1"
tracing-subscriber = { version = "0.3", features=['time', 'json'] }
time = { version = "0.3", features=['wasm-bindgen'] }
http = "1.0.0"
anyhow = { workspace = true }
futures-util = "0.3.29"
urlencoding = "2.1.3"

[dependencies.uuid]
version = "1.5.0"
features = [
    "v4",
    "v7",
    "js",
]
